--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -213,19 +213,23 @@
       </div>
       <div class="row justify-content-center fs-5 text-center">
         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#popup2">
-                  <img src="img/card/HTML.png" alt="Andi Wicaksono" width="200"
-                      class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#popup2"
-                      data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
-                  <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">Andi Wicaksono</h1>
-              </button>
-        <div class="col-md-4"  data-aos="flip-down" data-aos-offset="250" data-aos-duration="2000" data-aos-delay="400">
-            <img src="img/card/CSS.png" alt="CSS" width="200"
-              class="shadow rounded-circle img-thumbnail" />
-        </div>
-        <div class="col-md-4"  data-aos="flip-down" data-aos-offset="250" data-aos-duration="2000" data-aos-delay="600">
-          <img src="img/card/Bootstrap.png" alt="Andi Wicaksono" width="200"
-            class="shadow rounded-circle img-thumbnail" />
-        </div>
+          <img src="img/card/HTML.png" alt="Andi Wicaksono" width="200"
+              class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#popup2"
+              data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
+              <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">HTML</h1>
+        </button>
+        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#popup3">
+          <img src="img/card/HTML.png" alt="Andi Wicaksono" width="200"
+              class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#popup3"
+              data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
+              <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">Bootstrap</h1>
+        </button>
+        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#popup4">
+          <img src="img/card/HTML.png" alt="Andi Wicaksono" width="200"
+              class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#popup4"
+              data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
+              <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">CSS</h1>
+        </button>
       </div>
     </div>
 
@@ -235,19 +239,64 @@
             <div class="modal-content">
                  <div class="modal-header">
                     <h5 class="modal-title fs-5" id="exampleModalLabel">
-                    Data Diri - Andi Wicaksono
+                    HTML (Hypertext Markup Language):
                     </h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <!-- Isi data diri Anda di sini -->
-                    <img src="img/profil/profil2.jpg" alt="Andi Wicaksono" width="200"
+                    <img src="img/card/HTML.png" alt="HTML" width="200"
                         class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#exampleModal"
                         data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
-                    <p>Nama: Andi Wicaksono</p>
-                    <p>Tanggal Lahir: 16 April 2006</p>
-                    <p>Sekolah: SMK N 3 Yogyakarta</p>
-                    <p><strong>D.I Yogyakarta<strong></p>
+                    <p>HTML adalah bahasa yang digunakan untuk membuat struktur dasar dari halaman web. Ini merupakan fondasi dari hampir semua halaman web yang ada di internet. HTML digunakan untuk mengatur elemen-elemen dasar, seperti teks, gambar, tautan, dan elemen lainnya pada halaman web. Contoh: Anda bisa menggunakan HTML untuk menentukan judul halaman, membuat paragraf, menampilkan gambar, atau menambahkan tautan ke halaman lain.</p>
+                </div>
+                <div class="modal-footer">
+                <p></p>
+                </div>     
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal POP UP 3 -->
+    <div class="modal fade" id="popup3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                 <div class="modal-header">
+                    <h5 class="modal-title fs-5" id="exampleModalLabel">
+                    Bootstrap
+                    </h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <!-- Isi data diri Anda di sini -->
+                    <img src="img/card/Bootstrap.png" alt="Bootstrap" width="200"
+                        class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                        data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
+                    <p>Bootstrap adalah kerangka kerja front-end open-source yang memudahkan pengembangan web dengan menyediakan beragam komponen dan gaya pra-didesain. Bootstrap dirancang untuk mempercepat proses pengembangan web. Ini menyediakan komponen seperti tombol, formulir, navbar, dan banyak lagi yang dapat digunakan dengan mudah untuk membangun situs web responsif dan menarik. Contoh: Dengan Bootstrap, Anda dapat dengan cepat menambahkan menu navigasi yang responsif, membuat tombol dengan berbagai gaya, atau menggabungkan elemen tata letak yang sudah jadi dalam proyek web Anda.</p>   
+                </div>
+                <div class="modal-footer">
+                <p>"Kode adalah bahasa yang lebih kuat daripada kata-kata." - Derek Ralston</p>
+                </div>     
+            </div>
+        </div>
+    </div>                  
+
+    <!-- Modal POP UP 4 -->
+    <div class="modal fade" id="popup4" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                 <div class="modal-header">
+                    <h5 class="modal-title fs-5" id="exampleModalLabel">
+                    CSS (Cascading Style Sheets)
+                    </h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <!-- Isi data diri Anda di sini -->
+                    <img src="img/card/CSS.png" alt="CSS" width="200"
+                        class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                        data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
+                    <p>CSS adalah bahasa gaya yang digunakan untuk mengatur tampilan dan desain halaman web. Ini berfungsi sebagai "penyamaran" yang mengubah tampilan elemen HTML. CSS digunakan untuk mengontrol warna, ukuran teks, tata letak elemen, latar belakang, dan dekorasi halaman web. Dengan CSS, Anda bisa mengubah gaya situs web secara keseluruhan. Contoh: Misalnya, Anda dapat menggunakan CSS untuk membuat teks lebih besar, mengubah warna latar belakang, atau mengatur elemen dalam tata letak kolom.</p>
                 </div>
                 <div class="modal-footer">
                 <p>"Kode adalah bahasa yang lebih kuat daripada kata-kata." - Derek Ralston</p>
@@ -255,7 +304,7 @@
             </div>
         </div>
     </div>
-    
+                      
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#868fba" fill-opacity="1"
         d="M0,64L0,128L60,128L60,192L120,192L120,288L180,288L180,32L240,32L240,192L300,192L300,160L360,160L360,224L420,224L420,128L480,128L480,224L540,224L540,128L600,128L600,128L660,128L660,160L720,160L720,288L780,288L780,160L840,160L840,32L900,32L900,160L960,160L960,256L1020,256L1020,288L1080,288L1080,192L1140,192L1140,288L1200,288L1200,192L1260,192L1260,160L1320,160L1320,64L1380,64L1380,288L1440,288L1440,320L1380,320L1380,320L1320,320L1320,320L1260,320L1260,320L1200,320L1200,320L1140,320L1140,320L1080,320L1080,320L1020,320L1020,320L960,320L960,320L900,320L900,320L840,320L840,320L780,320L780,320L720,320L720,320L660,320L660,320L600,320L600,320L540,320L540,320L480,320L480,320L420,320L420,320L360,320L360,320L300,320L300,320L240,320L240,320L180,320L180,320L120,320L120,320L60,320L60,320L0,320L0,320Z">
