--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -212,24 +212,27 @@
         </div>
       </div>
       <div class="row justify-content-center fs-5 text-center">
-        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#popup2">
-          <img src="img/card/HTML.png" alt="Andi Wicaksono" width="200"
-              class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#popup2"
-              data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
-              <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">HTML</h1>
-        </button>
-        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#popup3">
-          <img src="img/card/HTML.png" alt="Andi Wicaksono" width="200"
-              class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#popup3"
-              data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
-              <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">Bootstrap</h1>
-        </button>
-        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#popup4">
-          <img src="img/card/HTML.png" alt="Andi Wicaksono" width="200"
-              class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#popup4"
-              data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
-              <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">CSS</h1>
-        </button>
+        <div class="col-md-4">
+          <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#popup2">
+            <img src="img/card/HTML.png" alt="HTML" width="200"
+                class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#popup2"
+                data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
+                <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">HTML</h1>
+          </button>
+        <div class="col-md-4">
+          <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#popup3">
+            <img src="img/card/Bootstrap.png" alt="Bootstrap" width="200"
+                class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#popup3"
+                data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
+                <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">Bootstrap</h1>
+          </button>
+        <div class="col-md-4">
+          <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#popup4">
+            <img src="img/card/CSS.png" alt="CSS" width="200"
+                class="shadow rounded-circle img-thumbnail" data-bs-toggle="modal" data-bs-target="#popup4"
+                data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
+                <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">CSS</h1>
+          </button>
       </div>
     </div>
 
