--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -219,6 +219,7 @@
                 data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
                 <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">HTML</h1>
           </button>
+        </div>
         <div class="col-md-4">
           <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#popup3">
             <img src="img/card/Bootstrap.png" alt="Bootstrap" width="200"
@@ -226,6 +227,7 @@
                 data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
                 <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">Bootstrap</h1>
           </button>
+        </div>
         <div class="col-md-4">
           <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#popup4">
             <img src="img/card/CSS.png" alt="CSS" width="200"
@@ -233,6 +235,7 @@
                 data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
                 <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">CSS</h1>
           </button>
+        </div>
       </div>
     </div>
 
