--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -150,7 +150,7 @@
             <div class="card-body">
               <h5 class="card-title">Website Portofolio</h5>
               <p class="card-text">
-                Website ini berisi data diri dari Andi Wicaksono.
+                Website portofolio ini berisi tentang data diri dari seseorang yang bernama Andi Wicaksono.
               </p>
               <a href="#" class="btn btn-primary">Kunjungi</a>
             </div>
@@ -257,7 +257,7 @@
                     <p style="text-align: justify;">HTML adalah bahasa yang digunakan untuk membuat struktur dasar dari halaman web. Ini merupakan fondasi dari hampir semua halaman web yang ada di internet. HTML digunakan untuk mengatur elemen-elemen dasar, seperti teks, gambar, tautan, dan elemen lainnya pada halaman web. Contoh: Anda bisa menggunakan HTML untuk menentukan judul halaman, membuat paragraf, menampilkan gambar, atau menambahkan tautan ke halaman lain.</p>
                 </div>
                 <div class="modal-footer">
-                <p></p>
+                <p>"Semua web dimulai dengan <html>."</p>
                 </div>     
             </div>
         </div>
@@ -281,7 +281,7 @@
                     <p style="text-align: justify;">Bootstrap adalah kerangka kerja front-end open-source yang memudahkan pengembangan web dengan menyediakan beragam komponen dan gaya pra-didesain. Bootstrap dirancang untuk mempercepat proses pengembangan web. Ini menyediakan komponen seperti tombol, formulir, navbar, dan banyak lagi yang dapat digunakan dengan mudah untuk membangun situs web responsif dan menarik. Contoh: Dengan Bootstrap, Anda dapat dengan cepat menambahkan menu navigasi yang responsif, membuat tombol dengan berbagai gaya, atau menggabungkan elemen tata letak yang sudah jadi dalam proyek web Anda.</p>   
                 </div>
                 <div class="modal-footer">
-                <p></p>
+                <p>"Desain yang indah, kode yang bersih: Itulah Bootstrap."</p>
                 </div>     
             </div>
         </div>
@@ -305,7 +305,7 @@
                     <p style="text-align: justify;">CSS adalah bahasa gaya yang digunakan untuk mengatur tampilan dan desain halaman web. Ini berfungsi sebagai "penyamaran" yang mengubah tampilan elemen HTML. CSS digunakan untuk mengontrol warna, ukuran teks, tata letak elemen, latar belakang, dan dekorasi halaman web. Dengan CSS, Anda bisa mengubah gaya situs web secara keseluruhan. Contoh: Misalnya, Anda dapat menggunakan CSS untuk membuat teks lebih besar, mengubah warna latar belakang, atau mengatur elemen dalam tata letak kolom.</p>
                 </div>
                 <div class="modal-footer">
-                <p></p>
+                <p>"Tanpa CSS, web akan seperti buku teks tanpa ilustrasi."</p>
                 </div>     
             </div>
         </div>
