--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -149,7 +149,7 @@
             <img src="img/card/webportofolio.png" class="card-img-top" alt="webfilm" />
             <div class="card-body">
               <h5 class="card-title">Website Portofolio</h5>
-              <p class="card-text">
+              <p class="card-text" style="font-weight: normal;">
                 Website portofolio ini berisi tentang data diri dari seseorang yang bernama Andi Wicaksono.
               </p>
               <a href="#" class="btn btn-primary">Kunjungi</a>
@@ -161,7 +161,7 @@
             <img src="img/card/webfilm.png" class="card-img-top" alt="webfilm" />
             <div class="card-body">
               <h5 class="card-title">Website Film</h5>
-              <p class="card-text">
+              <p class="card-text" style="font-weight: normal;">
                 Website ini berisi kumpulan film-film dengan berbgai genre.
               </p>
               <a href="https://zoom21-film.vercel.app/" class="btn btn-primary">Kunjungi</a>
@@ -173,7 +173,7 @@
             <img src="img/card/Arduino Smart Door Lock.png" class="card-img-top" alt="webfilm" />
             <div class="card-body">
               <h5 class="card-title">Arduino Smart Door Lock</h5>
-              <p class="card-text">
+              <p class="card-text" style="font-weight: normal;">
                 Sistem pintu pintar menggunakan keypad dan touch sensor.
               </p>
               <a href="#" class="btn btn-primary">Kunjungi</a>
@@ -185,7 +185,7 @@
             <img src="img/card/Motion Detection Alarm.jpg" class="card-img-top" alt="webfilm" />
             <div class="card-body">
               <h5 class="card-title">Motion Detection Alarm</h5>
-              <p class="card-text">
+              <p class="card-text" style="font-weight: normal;">
                 Alarm pendeteksi gerakan yang terintergrasi dengan Bot Telegram & WhatsApp.
               </p>
               <a href="#" class="btn btn-primary">Kunjungi</a>
@@ -256,7 +256,7 @@
                         data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
                     <p style="text-align: justify;">HTML adalah bahasa yang digunakan untuk membuat struktur dasar dari halaman web. Ini merupakan fondasi dari hampir semua halaman web yang ada di internet. HTML digunakan untuk mengatur elemen-elemen dasar, seperti teks, gambar, tautan, dan elemen lainnya pada halaman web. Contoh: Anda bisa menggunakan HTML untuk menentukan judul halaman, membuat paragraf, menampilkan gambar, atau menambahkan tautan ke halaman lain.</p>
                 </div>
-                <div class="modal-footer">
+                <div class="modal-footer" style="text-align: center;">
                 <p>"Semua web dimulai dengan <html>."</p>
                 </div>     
             </div>
@@ -280,7 +280,7 @@
                         data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
                     <p style="text-align: justify;">Bootstrap adalah kerangka kerja front-end open-source yang memudahkan pengembangan web dengan menyediakan beragam komponen dan gaya pra-didesain. Bootstrap dirancang untuk mempercepat proses pengembangan web. Ini menyediakan komponen seperti tombol, formulir, navbar, dan banyak lagi yang dapat digunakan dengan mudah untuk membangun situs web responsif dan menarik. Contoh: Dengan Bootstrap, Anda dapat dengan cepat menambahkan menu navigasi yang responsif, membuat tombol dengan berbagai gaya, atau menggabungkan elemen tata letak yang sudah jadi dalam proyek web Anda.</p>   
                 </div>
-                <div class="modal-footer">
+                <div class="modal-footer" style="text-align: center;">
                 <p>"Desain yang indah, kode yang bersih: Itulah Bootstrap."</p>
                 </div>     
             </div>
@@ -304,7 +304,7 @@
                         data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
                     <p style="text-align: justify;">CSS adalah bahasa gaya yang digunakan untuk mengatur tampilan dan desain halaman web. Ini berfungsi sebagai "penyamaran" yang mengubah tampilan elemen HTML. CSS digunakan untuk mengontrol warna, ukuran teks, tata letak elemen, latar belakang, dan dekorasi halaman web. Dengan CSS, Anda bisa mengubah gaya situs web secara keseluruhan. Contoh: Misalnya, Anda dapat menggunakan CSS untuk membuat teks lebih besar, mengubah warna latar belakang, atau mengatur elemen dalam tata letak kolom.</p>
                 </div>
-                <div class="modal-footer">
+                <div class="modal-footer" style="text-align: center;">
                 <p>"Tanpa CSS, web akan seperti buku teks tanpa ilustrasi."</p>
                 </div>     
             </div>
