--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -257,7 +257,7 @@
                     <p style="text-align: justify; font-weight: normal;">HTML adalah bahasa yang digunakan untuk membuat struktur dasar dari halaman web. Ini merupakan fondasi dari hampir semua halaman web yang ada di internet. HTML digunakan untuk mengatur elemen-elemen dasar, seperti teks, gambar, tautan, dan elemen lainnya pada halaman web. Contoh: Anda bisa menggunakan HTML untuk menentukan judul halaman, membuat paragraf, menampilkan gambar, atau menambahkan tautan ke halaman lain.</p>
                 </div>
                 <div class="modal-footer" style="text-align: center;">
-                <p>"Semua web dimulai dengan <html>."</p>
+                <p>"Situs web tanpa HTML sama seperti buku tanpa halaman."</p>
                 </div>     
             </div>
         </div>
