--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -9,7 +9,10 @@
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-
+  
+  <!-- Bootstrap Icon-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+  
   <!-- CSS Saya -->
   <link rel="stylesheet" type="text/css" href="styles.css" />
 
@@ -77,6 +80,10 @@
                       data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
                   <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">Andi Wicaksono</h1>
               </button>
+              <div class="row">
+                  <i class="bi bi-instagram"></i>
+                  <i class="bi bi-github"></i>
+              </div>  
           </div>
       </div>
       <div class="row justify-content-center fs-5 text-center">
