--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -81,9 +81,13 @@
                   <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">Andi Wicaksono</h1>
               </button>
               <div class="row">
-                  <i class="bi bi-instagram"></i>
-                  <i class="bi bi-github"></i>
-              </div>  
+                  <a href="https://instagram.com/andilauw._?igshid=OGQ5ZDc2ODk2ZA==" class="btn btn-link" target="_blank">
+                      <i class="bi bi-instagram"></i> Instagram
+                  </a>
+                  <a href="https://github.com/Andiw1" target="_blank">
+                      <i class="bi bi-github"></i> GitHub
+                  </a>
+              </div>
           </div>
       </div>
       <div class="row justify-content-center fs-5 text-center">
