--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -81,12 +81,14 @@
                   <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">Andi Wicaksono</h1>
               </button>
               <div class="row">
+                <div class="d-flex justify-content-between">
                   <a href="https://instagram.com/andilauw._?igshid=OGQ5ZDc2ODk2ZA==" class="btn btn-link" target="_blank">
-                      <i class="bi bi-instagram"></i> Instagram
+                      <i class="bi bi-instagram"></i>
                   </a>
                   <a href="https://github.com/Andiw1" target="_blank">
-                      <i class="bi bi-github"></i> GitHub
+                      <i class="bi bi-github"></i>
                   </a>
+                </div>
               </div>
           </div>
       </div>
