--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -80,7 +80,7 @@
                       data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
                   <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">Andi Wicaksono</h1>
               </button>
-              <div class="row">
+              <div class="row justify-content-center">
                 <div class="col-md-6">
                   <a href="https://instagram.com/andilauw._?igshid=OGQ5ZDc2ODk2ZA==" class="btn btn-link" target="_blank">
                       <i class="bi bi-instagram"></i>
