--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -82,10 +82,10 @@
               </button>
               <div class="row justify-content-center">
                 <div class="col-md-6">
-                  <a href="https://instagram.com/andilauw._?igshid=OGQ5ZDc2ODk2ZA==" class="btn btn-link" target="_blank">
+                  <a href="https://instagram.com/andilauw._?igshid=OGQ5ZDc2ODk2ZA==" class="btn btn-link">
                       <i class="bi bi-instagram"></i>
                   </a>
-                  <a href="https://github.com/Andiw1" target="_blank">
+                  <a href="https://github.com/Andiw1" class="btn btn-link" >
                       <i class="bi bi-github"></i>
                   </a>
                 </div>
