--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -388,6 +388,8 @@
     gsap.to('.down', { duration: 2, delay: 0.5, text: 'Andi Wicaksono', });
     gsap.to('.header-subtitle', { duration: 4, delay: 3, text: 'Siswa Jurusan TKJ dengan minat Web Designer' });
     gsap.from('.up', { duration: 1, x: -50, opacity: 0, ease: 'back'});
+    gsap.from('.bi bi-github', { duration: 1, x: 50, opacity: 0, ease: 'back'});
+    gsap.from('.bi bi-instagram', { duration: 1, x: -50, opacity: 0, ease: 'back'});
   </script>
   
   <!-- Script AOS -->
