--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -81,7 +81,7 @@
                   <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">Andi Wicaksono</h1>
               </button>
               <div class="row justify-content-center">
-                <div class="col-md-6" data-aos="fade-down" data-aos-offset="230" data-aos-duration="2000">
+                <div class="col-md-6" data-aos="flip-right" data-aos-offset="230" data-aos-duration="2000">
                   <a href="https://instagram.com/andilauw._?igshid=OGQ5ZDc2ODk2ZA==" class="btn btn-link">
                       <i class="bi bi-instagram"></i>
                   </a>
