--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -81,19 +81,19 @@
                   <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">Andi Wicaksono</h1>
               </button>
               <div class="row justify-content-center">
-                <div class="col-md-6" data-aos="flip-right" data-aos-offset="230" data-aos-duration="2000">
+                <div class="col-md-6">
                   <a href="https://instagram.com/andilauw._?igshid=OGQ5ZDc2ODk2ZA==" class="btn btn-link">
-                      <i class="bi bi-instagram"></i>
+                      <i class="bi bi-instagram" data-aos="flip-left" data-aos-offset="230" data-aos-duration="1000"></i>
                   </a>
                   <a href="https://github.com/Andiw1" class="btn btn-link" >
-                      <i class="bi bi-github"></i>
+                      <i class="bi bi-github" data-aos="flip-right" data-aos-offset="230" data-aos-duration="1000"></i>
                   </a>
                 </div>
               </div>
           </div>
       </div>
       <div class="row justify-content-center fs-5 text-center">
-        <div class="col-md-6" data-aos="fade-right" data-aos-offset="230" data-aos-duration="2000">
+        <div class="col-md-6" data-aos="fade-left" data-aos-offset="230" data-aos-duration="2000">
           <p>
             Saya adalah seorang pelajar yang duduk dibangku kelas 12 TKJ di
             SMKN 3 Yogyakarta dengan minat utama sebagai seorang Web
@@ -102,7 +102,7 @@
             CSS, dan Bootstrap untuk mencapai tujuan karir saya.
           </p>
         </div>
-        <div class="col-md-6" data-aos="fade-left" data-aos-offset="230" data-aos-duration="2000">
+        <div class="col-md-6" data-aos="fade-right" data-aos-offset="230" data-aos-duration="2000" data-aos-delay="200">
           <p>
             Semua pengalaman dan pembelajaran ini telah membantu saya
             mempersiapkan diri untuk masa depan yang sukses dalam bidang
