--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -82,12 +82,16 @@
               </button>
               <div class="row justify-content-center">
                 <div class="col-md-6">
-                  <a href="https://instagram.com/andilauw._?igshid=OGQ5ZDc2ODk2ZA==" class="btn btn-link"  data-aos="flip-left" data-aos-offset="230" data-aos-duration="1000">
-                      <i class="bi bi-instagram"></i>
-                  </a>
-                  <a href="https://github.com/Andiw1" class="btn btn-link" data-aos="flip-right" data-aos-offset="230" data-aos-duration="1000">
-                      <i class="bi bi-github"></i>
-                  </a>
+                  <div data-aos="flip-left" data-aos-offset="230" data-aos-duration="1000">
+                    <a href="https://instagram.com/andilauw._?igshid=OGQ5ZDc2ODk2ZA==" class="btn btn-link">
+                        <i class="bi bi-instagram"></i>
+                    </a>
+                  </div>
+                  <div data-aos="flip-right" data-aos-offset="230" data-aos-duration="1000">
+                    <a href="https://github.com/Andiw1" class="btn btn-link">
+                        <i class="bi bi-github"></i>
+                    </a>
+                  </div>
                 </div>
               </div>
           </div>
