--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -87,7 +87,7 @@
                         <i class="bi bi-instagram"></i>
                     </a>
                   </div>
-                  <div data-aos="flip-right" data-aos-offset="230" data-aos-duration="1000">
+                  <div data-aos="flip-right" data-aos-offset="230" data-aos-duration="1000" data-aos-delay="200">
                     <a href="https://github.com/Andiw1" class="btn btn-link">
                         <i class="bi bi-github"></i>
                     </a>
