--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -81,18 +81,16 @@
                   <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">Andi Wicaksono</h1>
               </button>
               <div class="row justify-content-center">
-                <div class="col-md-6">
-                  <div data-aos="flip-left" data-aos-offset="230" data-aos-duration="1000">
+                  <div class="col-md-6" data-aos="flip-left" data-aos-offset="230" data-aos-duration="1000">
                     <a href="https://instagram.com/andilauw._?igshid=OGQ5ZDc2ODk2ZA==" class="btn btn-link">
                         <i class="bi bi-instagram"></i>
                     </a>
                   </div>
-                  <div data-aos="flip-right" data-aos-offset="230" data-aos-duration="1000" data-aos-delay="200">
+                  <div class="col-md-6" data-aos="flip-right" data-aos-offset="230" data-aos-duration="1000" data-aos-delay="200">
                     <a href="https://github.com/Andiw1" class="btn btn-link">
                         <i class="bi bi-github"></i>
                     </a>
                   </div>
-                </div>
               </div>
           </div>
       </div>
