--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -80,6 +80,11 @@
                       data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
                   <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">Andi Wicaksono</h1>
               </button>
+             <div class="icon">
+        <a href="https://www.linkedin.com/in/irfan-syarifudin" target="_blank" class="href text-black"><i class="bi bi-linkedin p-4 animate__animated animate__bounceIn animate__slower animate__delay-5s"></i></a>
+        <a href="https://github.com/Irfan3006" target="_blank" class="href text-black"><i class="bi bi-github p-4 animate__animated animate__bounceIn animate__slower animate__delay-5s"></i></a>
+        <a href="https://www.instagram.com/irfann_404" target="_blank" class="href text-black"> <i class="bi bi-instagram p-4 animate__animated animate__bounceIn animate__slower animate__delay-5s"></i></a>
+      </div>
               <div class="row justify-content-center">
                     <a href="https://instagram.com/andilauw._?igshid=OGQ5ZDc2ODk2ZA==" class="btn btn-link" data-aos="flip-left" data-aos-offset="230" data-aos-duration="1000">
                         <i class="bi bi-instagram"></i>
