--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -16,6 +16,9 @@
   <!-- CSS Saya -->
   <link rel="stylesheet" type="text/css" href="styles.css" />
 
+  <!-- Animate CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
   <!-- AOS -->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
