--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -83,9 +83,13 @@
                       data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
                   <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">Andi Wicaksono</h1>
               </button>
-              <div class="icon">
-                  <a href="https://github.com/Andiw1" target="_blank" class="href text-black"><i class="bi bi-github p-4 animate__animated animate__bounceIn animate__slower animate__delay-5s"></i></a>
-                  <a href="https://instagram.com/andilauw._?igshid=OGQ5ZDc2ODk2ZA==" target="_blank" class="href text-black"> <i class="bi bi-instagram p-4 animate__animated animate__bounceIn animate__slower animate__delay-5s"></i></a>
+             <div class="icon">
+                  <a href="https://github.com/Andiw1" target="_blank" class="href text-black" data-aos="fade-up">
+                  <i class="bi bi-github"></i>
+                  </a>
+                  <a href="https://instagram.com/andilauw._?igshid=OGQ5ZDc2ODk2ZA==" target="_blank" class="href text-black" data-aos="fade-up">
+                  <i class="bi bi-instagram"></i>
+                  </a>
               </div>
           </div>
       </div>
