--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -84,10 +84,10 @@
                   <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">Andi Wicaksono</h1>
               </button>
              <div class="icon">
-                  <a href="https://github.com/Andiw1" target="_blank" class="href text-black" data-aos="fade-up">
+                  <a href="https://github.com/Andiw1" target="_blank" data-aos="flip-left">
                   <i class="bi bi-github"></i>
                   </a>
-                  <a href="https://instagram.com/andilauw._?igshid=OGQ5ZDc2ODk2ZA==" target="_blank" class="href text-black" data-aos="fade-up">
+                  <a href="https://instagram.com/andilauw._?igshid=OGQ5ZDc2ODk2ZA==" target="_blank" data-aos="flip-right">
                   <i class="bi bi-instagram"></i>
                   </a>
               </div>
