--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -84,6 +84,9 @@
                   <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">Andi Wicaksono</h1>
               </button>
               <div class="icon" data-aos="flip-left">
+                  <a href="https://github.com/Andiw1" target="_blank" class="href text-black" data-aos="flip-right">
+                    <i class="bi bi-github p-4"></i>
+                  </a>
                   <a href="https://instagram.com/andilauw._?igshid=OGQ5ZDc2ODk2ZA==" target="_blank" class="href text-black" data-aos="flip-right">
                     <i class="bi bi-instagram p-4"></i>
                   </a>
