--- a/Andi Portofolio/index.html
+++ b/Andi Portofolio/index.html
@@ -83,14 +83,14 @@
                       data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000" />
                   <h1 class="display-4 mt-3 text-dark" style="text-decoration: none;">Andi Wicaksono</h1>
               </button>
-              <div class="icon" data-aos="flip-left" data-aos-offset="250" data-aos-duration="2000">
+              <div class="icon" data-aos="flip-left" data-aos-offset="210" data-aos-duration="2000">
                   <a href="https://github.com/Andiw1" target="_blank" class="href text-black"><i class="bi bi-github p-4"></i></a>
                   <a href="https://instagram.com/andilauw._?igshid=OGQ5ZDc2ODk2ZA==" target="_blank" class="href text-black"> <i class="bi bi-instagram p-4"></i></a>
               </div>
           </div>
       </div>
       <div class="row justify-content-center fs-5 text-center">
-        <div class="col-md-6" data-aos="fade-left" data-aos-offset="230" data-aos-duration="2000">
+        <div class="col-md-6" data-aos="fade-right" data-aos-offset="230" data-aos-duration="2000">
           <p>
             Saya adalah seorang pelajar yang duduk dibangku kelas 12 TKJ di
             SMKN 3 Yogyakarta dengan minat utama sebagai seorang Web
@@ -99,7 +99,7 @@
             CSS, dan Bootstrap untuk mencapai tujuan karir saya.
           </p>
         </div>
-        <div class="col-md-6" data-aos="fade-right" data-aos-offset="230" data-aos-duration="2000" data-aos-delay="200">
+        <div class="col-md-6" data-aos="fade-left" data-aos-offset="230" data-aos-duration="2000" data-aos-delay="200">
           <p>
             Semua pengalaman dan pembelajaran ini telah membantu saya
             mempersiapkan diri untuk masa depan yang sukses dalam bidang
